hw2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    DO

Grammar

Rule 0     S' -> program
Rule 1     program -> program class_decl
Rule 2     program -> empty
Rule 3     class_decl -> CLASS ID { class_body_decls }
Rule 4     class_decl -> CLASS ID ( EXTENDS ID ) { class_body_decls }
Rule 5     class_body_decls -> class_body_decls class_body_decl
Rule 6     class_body_decls -> class_body_decl
Rule 7     class_body_decl -> field_decl
Rule 8     class_body_decl -> method_decl
Rule 9     class_body_decl -> constructor_decl
Rule 10    field_decl -> modifier var_decl
Rule 11    modifier -> access class_member
Rule 12    access -> PUBLIC
Rule 13    access -> PRIVATE
Rule 14    access -> empty
Rule 15    class_member -> STATIC
Rule 16    class_member -> empty
Rule 17    var_decl -> type variables
Rule 18    type -> INT
Rule 19    type -> FLOAT
Rule 20    type -> BOOLEAN
Rule 21    type -> ID
Rule 22    variables -> variables , variable
Rule 23    variables -> variable
Rule 24    variable -> variable [ ]
Rule 25    variable -> ID
Rule 26    method_decl -> modifier ( all_type ) ID ( formals ) block
Rule 27    method_decl -> modifier ( all_type ) ID ( ) block
Rule 28    all_type -> type
Rule 29    all_type -> VOID
Rule 30    constructor_decl -> modifier ID ( formals ) block
Rule 31    constructor_decl -> modifier ID ( ) block
Rule 32    formals -> formals , formal_param
Rule 33    formals -> formal_param
Rule 34    formal_param -> type variable
Rule 35    block -> { stmts }
Rule 36    stmts -> stmts stmt
Rule 37    stmts -> empty
Rule 38    stmt -> IF ( expr ) stmt
Rule 39    stmt -> IF ( expr ) stmt ELSE stmt
Rule 40    stmt -> WHILE ( expr ) stmt
Rule 41    stmt -> FOR ( stmt_expr ; expr ; stmt_expr ) stmt
Rule 42    stmt -> RETURN exprs
Rule 43    stmt -> stmt_expr
Rule 44    stmt -> BREAK
Rule 45    stmt -> CONTINUE
Rule 46    stmt -> block
Rule 47    stmt -> var_decl
Rule 48    exprs -> exprs expr
Rule 49    exprs -> expr
Rule 50    literal -> INT_CONST
Rule 51    literal -> FLOAT_CONST
Rule 52    literal -> STRING_CONST
Rule 53    literal -> NULL
Rule 54    literal -> TRUE
Rule 55    literal -> FALSE
Rule 56    primary -> literal
Rule 57    primary -> THIS
Rule 58    primary -> SUPER
Rule 59    primary -> ( expr )
Rule 60    primary -> NEW ID ( have_arguments )
Rule 61    primary -> lhs
Rule 62    primary -> method_invocation
Rule 63    have_arguments -> arguments
Rule 64    have_arguments -> empty
Rule 65    arguments -> arguments , expr
Rule 66    arguments -> expr
Rule 67    lhs -> field_access
Rule 68    lhs -> array_access
Rule 69    field_access -> primary . ID
Rule 70    field_access -> ID
Rule 71    array_access -> primary [ expr ]
Rule 72    method_invocation -> field_access ( have_arguments )
Rule 73    expr -> primary
Rule 74    expr -> assign
Rule 75    expr -> new_array
Rule 76    expr -> expr arith_op expr
Rule 77    expr -> expr bool_op expr
Rule 78    expr -> unary_op expr
Rule 79    assign -> lhs = expr
Rule 80    assign -> lhs INC
Rule 81    assign -> INC lhs
Rule 82    assign -> lhs DEC
Rule 83    assign -> DEC lhs
Rule 84    new_array -> new_array [ ]
Rule 85    new_array -> new_array_temp
Rule 86    new_array_temp -> new_array_temp [ expr ]
Rule 87    new_array_temp -> NEW type [ expr ]
Rule 88    arith_op -> +
Rule 89    arith_op -> -
Rule 90    arith_op -> *
Rule 91    arith_op -> /
Rule 92    bool_op -> AND
Rule 93    bool_op -> OR
Rule 94    bool_op -> EQL
Rule 95    bool_op -> UNEQL
Rule 96    bool_op -> <
Rule 97    bool_op -> >
Rule 98    bool_op -> LE
Rule 99    bool_op -> GE
Rule 100   unary_op -> +
Rule 101   unary_op -> -
Rule 102   unary_op -> !
Rule 103   stmt_expr -> assign
Rule 104   stmt_expr -> method_invocation
Rule 105   empty -> <empty>

Terminals, with rules where they appear

!                    : 102
(                    : 4 26 26 27 27 30 31 38 39 40 41 59 60 72
)                    : 4 26 26 27 27 30 31 38 39 40 41 59 60 72
*                    : 90
+                    : 88 100
,                    : 22 32 65
-                    : 89 101
.                    : 69
/                    : 91
;                    : 41 41
<                    : 96
=                    : 79
>                    : 97
AND                  : 92
BOOLEAN              : 20
BREAK                : 44
CLASS                : 3 4
CONTINUE             : 45
DEC                  : 82 83
DO                   : 
ELSE                 : 39
EQL                  : 94
EXTENDS              : 4
FALSE                : 55
FLOAT                : 19
FLOAT_CONST          : 51
FOR                  : 41
GE                   : 99
ID                   : 3 4 4 21 25 26 27 30 31 60 69 70
IF                   : 38 39
INC                  : 80 81
INT                  : 18
INT_CONST            : 50
LE                   : 98
NEW                  : 60 87
NULL                 : 53
OR                   : 93
PRIVATE              : 13
PUBLIC               : 12
RETURN               : 42
STATIC               : 15
STRING_CONST         : 52
SUPER                : 58
THIS                 : 57
TRUE                 : 54
UNEQL                : 95
VOID                 : 29
WHILE                : 40
[                    : 24 71 84 86 87
]                    : 24 71 84 86 87
error                : 
{                    : 3 4 35
}                    : 3 4 35

Nonterminals, with rules where they appear

access               : 11
all_type             : 26 27
arguments            : 63 65
arith_op             : 76
array_access         : 68
assign               : 74 103
block                : 26 27 30 31 46
bool_op              : 77
class_body_decl      : 5 6
class_body_decls     : 3 4 5
class_decl           : 1
class_member         : 11
constructor_decl     : 9
empty                : 2 14 16 37 64
expr                 : 38 39 40 41 48 49 59 65 66 71 76 76 77 77 78 79 86 87
exprs                : 42 48
field_access         : 67 72
field_decl           : 7
formal_param         : 32 33
formals              : 26 30 32
have_arguments       : 60 72
lhs                  : 61 79 80 81 82 83
literal              : 56
method_decl          : 8
method_invocation    : 62 104
modifier             : 10 26 27 30 31
new_array            : 75 84
new_array_temp       : 85 86
primary              : 69 71 73
program              : 1 0
stmt                 : 36 38 39 39 40 41
stmt_expr            : 41 41 43
stmts                : 35 36
type                 : 17 28 34 87
unary_op             : 78
var_decl             : 10 47
variable             : 22 23 24 34
variables            : 17 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program class_decl
    (2) program -> . empty
    (105) empty -> .

    CLASS           reduce using rule 105 (empty -> .)
    $end            reduce using rule 105 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . class_decl
    (3) class_decl -> . CLASS ID { class_body_decls }
    (4) class_decl -> . CLASS ID ( EXTENDS ID ) { class_body_decls }

    CLASS           shift and go to state 3

    class_decl                     shift and go to state 4

state 2

    (2) program -> empty .

    CLASS           reduce using rule 2 (program -> empty .)
    $end            reduce using rule 2 (program -> empty .)


state 3

    (3) class_decl -> CLASS . ID { class_body_decls }
    (4) class_decl -> CLASS . ID ( EXTENDS ID ) { class_body_decls }

    ID              shift and go to state 5


state 4

    (1) program -> program class_decl .

    CLASS           reduce using rule 1 (program -> program class_decl .)
    $end            reduce using rule 1 (program -> program class_decl .)


state 5

    (3) class_decl -> CLASS ID . { class_body_decls }
    (4) class_decl -> CLASS ID . ( EXTENDS ID ) { class_body_decls }

    {               shift and go to state 7
    (               shift and go to state 6


state 6

    (4) class_decl -> CLASS ID ( . EXTENDS ID ) { class_body_decls }

    EXTENDS         shift and go to state 8


state 7

    (3) class_decl -> CLASS ID { . class_body_decls }
    (5) class_body_decls -> . class_body_decls class_body_decl
    (6) class_body_decls -> . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier ( all_type ) ID ( formals ) block
    (27) method_decl -> . modifier ( all_type ) ID ( ) block
    (30) constructor_decl -> . modifier ID ( formals ) block
    (31) constructor_decl -> . modifier ID ( ) block
    (11) modifier -> . access class_member
    (12) access -> . PUBLIC
    (13) access -> . PRIVATE
    (14) access -> . empty
    (105) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 10
    STATIC          reduce using rule 105 (empty -> .)
    (               reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)

    class_body_decl                shift and go to state 9
    field_decl                     shift and go to state 11
    constructor_decl               shift and go to state 12
    method_decl                    shift and go to state 13
    access                         shift and go to state 14
    empty                          shift and go to state 15
    modifier                       shift and go to state 17
    class_body_decls               shift and go to state 18

state 8

    (4) class_decl -> CLASS ID ( EXTENDS . ID ) { class_body_decls }

    ID              shift and go to state 19


state 9

    (6) class_body_decls -> class_body_decl .

    }               reduce using rule 6 (class_body_decls -> class_body_decl .)
    PUBLIC          reduce using rule 6 (class_body_decls -> class_body_decl .)
    PRIVATE         reduce using rule 6 (class_body_decls -> class_body_decl .)
    (               reduce using rule 6 (class_body_decls -> class_body_decl .)
    ID              reduce using rule 6 (class_body_decls -> class_body_decl .)
    INT             reduce using rule 6 (class_body_decls -> class_body_decl .)
    FLOAT           reduce using rule 6 (class_body_decls -> class_body_decl .)
    BOOLEAN         reduce using rule 6 (class_body_decls -> class_body_decl .)
    STATIC          reduce using rule 6 (class_body_decls -> class_body_decl .)


state 10

    (13) access -> PRIVATE .

    STATIC          reduce using rule 13 (access -> PRIVATE .)
    (               reduce using rule 13 (access -> PRIVATE .)
    ID              reduce using rule 13 (access -> PRIVATE .)
    INT             reduce using rule 13 (access -> PRIVATE .)
    FLOAT           reduce using rule 13 (access -> PRIVATE .)
    BOOLEAN         reduce using rule 13 (access -> PRIVATE .)


state 11

    (7) class_body_decl -> field_decl .

    }               reduce using rule 7 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 7 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 7 (class_body_decl -> field_decl .)
    (               reduce using rule 7 (class_body_decl -> field_decl .)
    ID              reduce using rule 7 (class_body_decl -> field_decl .)
    INT             reduce using rule 7 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 7 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 7 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 7 (class_body_decl -> field_decl .)


state 12

    (9) class_body_decl -> constructor_decl .

    }               reduce using rule 9 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> constructor_decl .)
    (               reduce using rule 9 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 9 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 9 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> constructor_decl .)


state 13

    (8) class_body_decl -> method_decl .

    }               reduce using rule 8 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> method_decl .)
    (               reduce using rule 8 (class_body_decl -> method_decl .)
    ID              reduce using rule 8 (class_body_decl -> method_decl .)
    INT             reduce using rule 8 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> method_decl .)


state 14

    (11) modifier -> access . class_member
    (15) class_member -> . STATIC
    (16) class_member -> . empty
    (105) empty -> .

    STATIC          shift and go to state 20
    (               reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)

    class_member                   shift and go to state 21
    empty                          shift and go to state 22

state 15

    (14) access -> empty .

    STATIC          reduce using rule 14 (access -> empty .)
    (               reduce using rule 14 (access -> empty .)
    ID              reduce using rule 14 (access -> empty .)
    INT             reduce using rule 14 (access -> empty .)
    FLOAT           reduce using rule 14 (access -> empty .)
    BOOLEAN         reduce using rule 14 (access -> empty .)


state 16

    (12) access -> PUBLIC .

    STATIC          reduce using rule 12 (access -> PUBLIC .)
    (               reduce using rule 12 (access -> PUBLIC .)
    ID              reduce using rule 12 (access -> PUBLIC .)
    INT             reduce using rule 12 (access -> PUBLIC .)
    FLOAT           reduce using rule 12 (access -> PUBLIC .)
    BOOLEAN         reduce using rule 12 (access -> PUBLIC .)


state 17

    (10) field_decl -> modifier . var_decl
    (26) method_decl -> modifier . ( all_type ) ID ( formals ) block
    (27) method_decl -> modifier . ( all_type ) ID ( ) block
    (30) constructor_decl -> modifier . ID ( formals ) block
    (31) constructor_decl -> modifier . ID ( ) block
    (17) var_decl -> . type variables
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    (               shift and go to state 23
    ID              shift and go to state 29
    INT             shift and go to state 26
    FLOAT           shift and go to state 24
    BOOLEAN         shift and go to state 27

    var_decl                       shift and go to state 25
    type                           shift and go to state 28

state 18

    (3) class_decl -> CLASS ID { class_body_decls . }
    (5) class_body_decls -> class_body_decls . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier ( all_type ) ID ( formals ) block
    (27) method_decl -> . modifier ( all_type ) ID ( ) block
    (30) constructor_decl -> . modifier ID ( formals ) block
    (31) constructor_decl -> . modifier ID ( ) block
    (11) modifier -> . access class_member
    (12) access -> . PUBLIC
    (13) access -> . PRIVATE
    (14) access -> . empty
    (105) empty -> .

    }               shift and go to state 31
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 10
    STATIC          reduce using rule 105 (empty -> .)
    (               reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)

    class_body_decl                shift and go to state 30
    field_decl                     shift and go to state 11
    constructor_decl               shift and go to state 12
    method_decl                    shift and go to state 13
    access                         shift and go to state 14
    empty                          shift and go to state 15
    modifier                       shift and go to state 17

state 19

    (4) class_decl -> CLASS ID ( EXTENDS ID . ) { class_body_decls }

    )               shift and go to state 32


state 20

    (15) class_member -> STATIC .

    (               reduce using rule 15 (class_member -> STATIC .)
    ID              reduce using rule 15 (class_member -> STATIC .)
    INT             reduce using rule 15 (class_member -> STATIC .)
    FLOAT           reduce using rule 15 (class_member -> STATIC .)
    BOOLEAN         reduce using rule 15 (class_member -> STATIC .)


state 21

    (11) modifier -> access class_member .

    (               reduce using rule 11 (modifier -> access class_member .)
    ID              reduce using rule 11 (modifier -> access class_member .)
    INT             reduce using rule 11 (modifier -> access class_member .)
    FLOAT           reduce using rule 11 (modifier -> access class_member .)
    BOOLEAN         reduce using rule 11 (modifier -> access class_member .)


state 22

    (16) class_member -> empty .

    (               reduce using rule 16 (class_member -> empty .)
    ID              reduce using rule 16 (class_member -> empty .)
    INT             reduce using rule 16 (class_member -> empty .)
    FLOAT           reduce using rule 16 (class_member -> empty .)
    BOOLEAN         reduce using rule 16 (class_member -> empty .)


state 23

    (26) method_decl -> modifier ( . all_type ) ID ( formals ) block
    (27) method_decl -> modifier ( . all_type ) ID ( ) block
    (28) all_type -> . type
    (29) all_type -> . VOID
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    VOID            shift and go to state 33
    INT             shift and go to state 26
    FLOAT           shift and go to state 24
    BOOLEAN         shift and go to state 27
    ID              shift and go to state 36

    type                           shift and go to state 34
    all_type                       shift and go to state 35

state 24

    (19) type -> FLOAT .

    ID              reduce using rule 19 (type -> FLOAT .)
    )               reduce using rule 19 (type -> FLOAT .)
    [               reduce using rule 19 (type -> FLOAT .)


state 25

    (10) field_decl -> modifier var_decl .

    }               reduce using rule 10 (field_decl -> modifier var_decl .)
    PUBLIC          reduce using rule 10 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 10 (field_decl -> modifier var_decl .)
    (               reduce using rule 10 (field_decl -> modifier var_decl .)
    ID              reduce using rule 10 (field_decl -> modifier var_decl .)
    INT             reduce using rule 10 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 10 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 10 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 10 (field_decl -> modifier var_decl .)


state 26

    (18) type -> INT .

    ID              reduce using rule 18 (type -> INT .)
    )               reduce using rule 18 (type -> INT .)
    [               reduce using rule 18 (type -> INT .)


state 27

    (20) type -> BOOLEAN .

    ID              reduce using rule 20 (type -> BOOLEAN .)
    )               reduce using rule 20 (type -> BOOLEAN .)
    [               reduce using rule 20 (type -> BOOLEAN .)


state 28

    (17) var_decl -> type . variables
    (22) variables -> . variables , variable
    (23) variables -> . variable
    (24) variable -> . variable [ ]
    (25) variable -> . ID

    ID              shift and go to state 39

    variable                       shift and go to state 38
    variables                      shift and go to state 37

state 29

    (30) constructor_decl -> modifier ID . ( formals ) block
    (31) constructor_decl -> modifier ID . ( ) block
    (21) type -> ID .

    (               shift and go to state 40
    ID              reduce using rule 21 (type -> ID .)


state 30

    (5) class_body_decls -> class_body_decls class_body_decl .

    }               reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    PUBLIC          reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    PRIVATE         reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    (               reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    ID              reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    INT             reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    FLOAT           reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    BOOLEAN         reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)
    STATIC          reduce using rule 5 (class_body_decls -> class_body_decls class_body_decl .)


state 31

    (3) class_decl -> CLASS ID { class_body_decls } .

    CLASS           reduce using rule 3 (class_decl -> CLASS ID { class_body_decls } .)
    $end            reduce using rule 3 (class_decl -> CLASS ID { class_body_decls } .)


state 32

    (4) class_decl -> CLASS ID ( EXTENDS ID ) . { class_body_decls }

    {               shift and go to state 41


state 33

    (29) all_type -> VOID .

    )               reduce using rule 29 (all_type -> VOID .)


state 34

    (28) all_type -> type .

    )               reduce using rule 28 (all_type -> type .)


state 35

    (26) method_decl -> modifier ( all_type . ) ID ( formals ) block
    (27) method_decl -> modifier ( all_type . ) ID ( ) block

    )               shift and go to state 42


state 36

    (21) type -> ID .

    )               reduce using rule 21 (type -> ID .)
    ID              reduce using rule 21 (type -> ID .)


state 37

    (17) var_decl -> type variables .
    (22) variables -> variables . , variable

    }               reduce using rule 17 (var_decl -> type variables .)
    PUBLIC          reduce using rule 17 (var_decl -> type variables .)
    PRIVATE         reduce using rule 17 (var_decl -> type variables .)
    (               reduce using rule 17 (var_decl -> type variables .)
    ID              reduce using rule 17 (var_decl -> type variables .)
    INT             reduce using rule 17 (var_decl -> type variables .)
    FLOAT           reduce using rule 17 (var_decl -> type variables .)
    BOOLEAN         reduce using rule 17 (var_decl -> type variables .)
    STATIC          reduce using rule 17 (var_decl -> type variables .)
    IF              reduce using rule 17 (var_decl -> type variables .)
    WHILE           reduce using rule 17 (var_decl -> type variables .)
    FOR             reduce using rule 17 (var_decl -> type variables .)
    RETURN          reduce using rule 17 (var_decl -> type variables .)
    BREAK           reduce using rule 17 (var_decl -> type variables .)
    CONTINUE        reduce using rule 17 (var_decl -> type variables .)
    {               reduce using rule 17 (var_decl -> type variables .)
    INC             reduce using rule 17 (var_decl -> type variables .)
    DEC             reduce using rule 17 (var_decl -> type variables .)
    THIS            reduce using rule 17 (var_decl -> type variables .)
    SUPER           reduce using rule 17 (var_decl -> type variables .)
    NEW             reduce using rule 17 (var_decl -> type variables .)
    INT_CONST       reduce using rule 17 (var_decl -> type variables .)
    FLOAT_CONST     reduce using rule 17 (var_decl -> type variables .)
    STRING_CONST    reduce using rule 17 (var_decl -> type variables .)
    NULL            reduce using rule 17 (var_decl -> type variables .)
    TRUE            reduce using rule 17 (var_decl -> type variables .)
    FALSE           reduce using rule 17 (var_decl -> type variables .)
    ELSE            reduce using rule 17 (var_decl -> type variables .)
    ,               shift and go to state 43


state 38

    (23) variables -> variable .
    (24) variable -> variable . [ ]

    ,               reduce using rule 23 (variables -> variable .)
    }               reduce using rule 23 (variables -> variable .)
    PUBLIC          reduce using rule 23 (variables -> variable .)
    PRIVATE         reduce using rule 23 (variables -> variable .)
    (               reduce using rule 23 (variables -> variable .)
    ID              reduce using rule 23 (variables -> variable .)
    INT             reduce using rule 23 (variables -> variable .)
    FLOAT           reduce using rule 23 (variables -> variable .)
    BOOLEAN         reduce using rule 23 (variables -> variable .)
    STATIC          reduce using rule 23 (variables -> variable .)
    IF              reduce using rule 23 (variables -> variable .)
    WHILE           reduce using rule 23 (variables -> variable .)
    FOR             reduce using rule 23 (variables -> variable .)
    RETURN          reduce using rule 23 (variables -> variable .)
    BREAK           reduce using rule 23 (variables -> variable .)
    CONTINUE        reduce using rule 23 (variables -> variable .)
    {               reduce using rule 23 (variables -> variable .)
    INC             reduce using rule 23 (variables -> variable .)
    DEC             reduce using rule 23 (variables -> variable .)
    THIS            reduce using rule 23 (variables -> variable .)
    SUPER           reduce using rule 23 (variables -> variable .)
    NEW             reduce using rule 23 (variables -> variable .)
    INT_CONST       reduce using rule 23 (variables -> variable .)
    FLOAT_CONST     reduce using rule 23 (variables -> variable .)
    STRING_CONST    reduce using rule 23 (variables -> variable .)
    NULL            reduce using rule 23 (variables -> variable .)
    TRUE            reduce using rule 23 (variables -> variable .)
    FALSE           reduce using rule 23 (variables -> variable .)
    ELSE            reduce using rule 23 (variables -> variable .)
    [               shift and go to state 44


state 39

    (25) variable -> ID .

    [               reduce using rule 25 (variable -> ID .)
    ,               reduce using rule 25 (variable -> ID .)
    }               reduce using rule 25 (variable -> ID .)
    PUBLIC          reduce using rule 25 (variable -> ID .)
    PRIVATE         reduce using rule 25 (variable -> ID .)
    (               reduce using rule 25 (variable -> ID .)
    ID              reduce using rule 25 (variable -> ID .)
    INT             reduce using rule 25 (variable -> ID .)
    FLOAT           reduce using rule 25 (variable -> ID .)
    BOOLEAN         reduce using rule 25 (variable -> ID .)
    STATIC          reduce using rule 25 (variable -> ID .)
    IF              reduce using rule 25 (variable -> ID .)
    WHILE           reduce using rule 25 (variable -> ID .)
    FOR             reduce using rule 25 (variable -> ID .)
    RETURN          reduce using rule 25 (variable -> ID .)
    BREAK           reduce using rule 25 (variable -> ID .)
    CONTINUE        reduce using rule 25 (variable -> ID .)
    {               reduce using rule 25 (variable -> ID .)
    INC             reduce using rule 25 (variable -> ID .)
    DEC             reduce using rule 25 (variable -> ID .)
    THIS            reduce using rule 25 (variable -> ID .)
    SUPER           reduce using rule 25 (variable -> ID .)
    NEW             reduce using rule 25 (variable -> ID .)
    INT_CONST       reduce using rule 25 (variable -> ID .)
    FLOAT_CONST     reduce using rule 25 (variable -> ID .)
    STRING_CONST    reduce using rule 25 (variable -> ID .)
    NULL            reduce using rule 25 (variable -> ID .)
    TRUE            reduce using rule 25 (variable -> ID .)
    FALSE           reduce using rule 25 (variable -> ID .)
    ELSE            reduce using rule 25 (variable -> ID .)
    )               reduce using rule 25 (variable -> ID .)


state 40

    (30) constructor_decl -> modifier ID ( . formals ) block
    (31) constructor_decl -> modifier ID ( . ) block
    (32) formals -> . formals , formal_param
    (33) formals -> . formal_param
    (34) formal_param -> . type variable
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    )               shift and go to state 46
    INT             shift and go to state 26
    FLOAT           shift and go to state 24
    BOOLEAN         shift and go to state 27
    ID              shift and go to state 36

    formal_param                   shift and go to state 45
    type                           shift and go to state 47
    formals                        shift and go to state 48

state 41

    (4) class_decl -> CLASS ID ( EXTENDS ID ) { . class_body_decls }
    (5) class_body_decls -> . class_body_decls class_body_decl
    (6) class_body_decls -> . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier ( all_type ) ID ( formals ) block
    (27) method_decl -> . modifier ( all_type ) ID ( ) block
    (30) constructor_decl -> . modifier ID ( formals ) block
    (31) constructor_decl -> . modifier ID ( ) block
    (11) modifier -> . access class_member
    (12) access -> . PUBLIC
    (13) access -> . PRIVATE
    (14) access -> . empty
    (105) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 10
    STATIC          reduce using rule 105 (empty -> .)
    (               reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)

    class_body_decl                shift and go to state 9
    field_decl                     shift and go to state 11
    constructor_decl               shift and go to state 12
    method_decl                    shift and go to state 13
    access                         shift and go to state 14
    empty                          shift and go to state 15
    modifier                       shift and go to state 17
    class_body_decls               shift and go to state 49

state 42

    (26) method_decl -> modifier ( all_type ) . ID ( formals ) block
    (27) method_decl -> modifier ( all_type ) . ID ( ) block

    ID              shift and go to state 50


state 43

    (22) variables -> variables , . variable
    (24) variable -> . variable [ ]
    (25) variable -> . ID

    ID              shift and go to state 39

    variable                       shift and go to state 51

state 44

    (24) variable -> variable [ . ]

    ]               shift and go to state 52


state 45

    (33) formals -> formal_param .

    )               reduce using rule 33 (formals -> formal_param .)
    ,               reduce using rule 33 (formals -> formal_param .)


state 46

    (31) constructor_decl -> modifier ID ( ) . block
    (35) block -> . { stmts }

    {               shift and go to state 53

    block                          shift and go to state 54

state 47

    (34) formal_param -> type . variable
    (24) variable -> . variable [ ]
    (25) variable -> . ID

    ID              shift and go to state 39

    variable                       shift and go to state 55

state 48

    (30) constructor_decl -> modifier ID ( formals . ) block
    (32) formals -> formals . , formal_param

    )               shift and go to state 56
    ,               shift and go to state 57


state 49

    (4) class_decl -> CLASS ID ( EXTENDS ID ) { class_body_decls . }
    (5) class_body_decls -> class_body_decls . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier ( all_type ) ID ( formals ) block
    (27) method_decl -> . modifier ( all_type ) ID ( ) block
    (30) constructor_decl -> . modifier ID ( formals ) block
    (31) constructor_decl -> . modifier ID ( ) block
    (11) modifier -> . access class_member
    (12) access -> . PUBLIC
    (13) access -> . PRIVATE
    (14) access -> . empty
    (105) empty -> .

    }               shift and go to state 58
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 10
    STATIC          reduce using rule 105 (empty -> .)
    (               reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    BOOLEAN         reduce using rule 105 (empty -> .)

    class_body_decl                shift and go to state 30
    field_decl                     shift and go to state 11
    constructor_decl               shift and go to state 12
    method_decl                    shift and go to state 13
    access                         shift and go to state 14
    empty                          shift and go to state 15
    modifier                       shift and go to state 17

state 50

    (26) method_decl -> modifier ( all_type ) ID . ( formals ) block
    (27) method_decl -> modifier ( all_type ) ID . ( ) block

    (               shift and go to state 59


state 51

    (22) variables -> variables , variable .
    (24) variable -> variable . [ ]

    ,               reduce using rule 22 (variables -> variables , variable .)
    }               reduce using rule 22 (variables -> variables , variable .)
    PUBLIC          reduce using rule 22 (variables -> variables , variable .)
    PRIVATE         reduce using rule 22 (variables -> variables , variable .)
    (               reduce using rule 22 (variables -> variables , variable .)
    ID              reduce using rule 22 (variables -> variables , variable .)
    INT             reduce using rule 22 (variables -> variables , variable .)
    FLOAT           reduce using rule 22 (variables -> variables , variable .)
    BOOLEAN         reduce using rule 22 (variables -> variables , variable .)
    STATIC          reduce using rule 22 (variables -> variables , variable .)
    IF              reduce using rule 22 (variables -> variables , variable .)
    WHILE           reduce using rule 22 (variables -> variables , variable .)
    FOR             reduce using rule 22 (variables -> variables , variable .)
    RETURN          reduce using rule 22 (variables -> variables , variable .)
    BREAK           reduce using rule 22 (variables -> variables , variable .)
    CONTINUE        reduce using rule 22 (variables -> variables , variable .)
    {               reduce using rule 22 (variables -> variables , variable .)
    INC             reduce using rule 22 (variables -> variables , variable .)
    DEC             reduce using rule 22 (variables -> variables , variable .)
    THIS            reduce using rule 22 (variables -> variables , variable .)
    SUPER           reduce using rule 22 (variables -> variables , variable .)
    NEW             reduce using rule 22 (variables -> variables , variable .)
    INT_CONST       reduce using rule 22 (variables -> variables , variable .)
    FLOAT_CONST     reduce using rule 22 (variables -> variables , variable .)
    STRING_CONST    reduce using rule 22 (variables -> variables , variable .)
    NULL            reduce using rule 22 (variables -> variables , variable .)
    TRUE            reduce using rule 22 (variables -> variables , variable .)
    FALSE           reduce using rule 22 (variables -> variables , variable .)
    ELSE            reduce using rule 22 (variables -> variables , variable .)
    [               shift and go to state 44

